# clpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  cloc_lang_defs.txt  todo
include/: clpp.hpp
include/clpp/: access_qualifier.hpp  address_qualifier.hpp  affinity_domain.hpp  affinity_domain_capabilities.hpp  affinity_domain_capabilities.ipp  affinity_domain_capabilities.tpp  binary_type.hpp  buffer.hpp  buffer.ipp  buffer.tpp  build_status.hpp  command.hpp  command_queue.hpp  command_queue.ipp  command_queue.tpp  command_queue_flags.hpp  command_queue_flags.ipp  command_queue_properties.hpp  command_queue_properties.ipp  command_queue_properties.tpp  context.hpp  context.ipp  context.tpp  context_properties.hpp  context_properties.ipp  context_properties.tpp  device.hpp  device.ipp  device.tpp  device_access.hpp  device_type.hpp  event.hpp  event.ipp  event.tpp  except.hpp  exception.hpp  exception.tpp  execution_capabilities.hpp  execution_capabilities.ipp  execution_capabilities.tpp  (+58 more)
include/clpp/detail/: cl_function.hpp  cl_function.ipp  command_queue_executor.hpp  command_queue_executor.ipp  command_queue_executor.tpp  common.hpp  error_handler.hpp  error_handler.ipp  error_handler.tpp  get_info_helper.hpp  get_info_helper.tpp  information_accessor.hpp  information_accessor.ipp  mask_wrapper.hpp  mask_wrapper.ipp  mask_wrapper.tpp  object.hpp  object.ipp  object.tpp  property_list_wrapper.hpp  property_list_wrapper.ipp  to_internal_data_vector.hpp
include/clpp/utility/: concepts.hpp  count_elements.hpp  make_array.hpp  to_underlying.hpp
include/utility/: concepts.hpp  count_elements.hpp  is_contigous_iterator.hpp  make_array.hpp  read_file.hpp  to_underlying.hpp  type_traits.hpp
test/: CMakeLists.txt  cl.hpp  kernel_add.cl  test_01.cpp
